默认域名示例

--- a/nginx_qrcode.conf
+++ b/nginx_qrcode.conf
@@ -4,7 +4,7 @@ upstream web {
 
 server {
   listen 80;
-  server_name qrcode.com;
+  server_name domain.com;
 
   location / {
     proxy_set_header Host $http_host;
